objects/AIA_Business_Associates__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>CASE(Type__c , 
'Contact',Contact__r.FirstName+' '+Contact__r.LastName,
'Partner','',
'Vendor','',
'')</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>The contact selected must be related with the Implementation's Account</errorMessage>
            <filterItems>
                <field>Contact.Account.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Related_Account_of_Implementation__c</valueField>
            </filterItems>
            <infoMessage>Please select contact associated with the Implementation's account</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Business_Associates_for_BAC_Document_Con</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipName>Business_Associates_for_BAC_Document_Imp</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Partner can be selected in this field</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Partner</value>
            </filterItems>
            <infoMessage>Select Partner</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Business_Associates_for_BAC_Document_Par</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_or_Vendor_Name__c</fullName>
        <formula>CASE(Type__c , 
'Contact',Contact__r.Account.Account_Legal_Name__c, 
'Partner',Partner__r.Account_Legal_Name__c, 
'Vendor',Vendor__r.Account_Legal_Name__c, 
'')</formula>
        <label>Partner/Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Account_of_Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Account of Implementation</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Business_Associates_for_BAC_Document</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contact</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only Vendor can be selected in this field</errorMessage>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Vendor</value>
            </filterItems>
            <infoMessage>Please select Vendor</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Business_Associates_for_BAC_Document_Ven</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>AIA Object created for DocuSign enhancements. This object will be used to store the Business Associates to be added onto the BAC document before it is sent for electronic signature using DocuSign.
Business Associates are essentials partners and contacts associated with an Account.</description>
    <label>Business Associate</label>
    <nameField>
        <displayFormat>BA-{0000}</displayFormat>
        <label>Biz Associate Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Associates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Contact</fullName>
        <active>true</active>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partner</fullName>
        <active>true</active>
        <label>Partner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor</fullName>
        <active>true</active>
        <label>Vendor</label>
    </recordTypes>
</CustomObject>